--- a/teoricas/teorica_03/src/event_camera.tex
+++ b/teoricas/teorica_03/src/event_camera.tex
@@ -1,12 +1,8 @@
-\begin{frame}
-    \frametitle{Cámara basada en eventos}
-    
-    
-    \TODO{Event based camera video}
-    
-    \begin{figure}[!h]
-        \centering
-        \includegraphics[width=0.8\columnwidth]{images/event_camera.png}
-    \end{figure}
-
+\begin{frame}[fragile]
+	\frametitle{Cámara basada en eventos}
+	
+	\begin{center}
+		\movie[loop]{\includegraphics[width=0.9\columnwidth]{images/event_camera.png}}{videos/event_camera.mp4}
+	\end{center}
+	
 \end{frame}
