--- a/teoricas/teorica_06/src/localization.tex
+++ b/teoricas/teorica_06/src/localization.tex
@@ -285,8 +285,8 @@
 \begin{frame}{Ejemplo: Movimiento basado en odometría (Banana shape)}
     \note{Información obtenida de Cyrill Stachniss Bayes: https://youtu.be/0lKHFJpaZvE}
     
-    \includegraphics<1>[height=1.8cm]{inexact_motion.png}
-    
+   \TODO{completar con imagen del libro}
+   
 \end{frame}
 
 \begin{frame}{Observation model}
@@ -298,6 +298,8 @@
 
 \begin{frame}{Ejemplo: Movimiento basado en odometría}
     \note{Información obtenida de Cyrill Stachniss Bayes: https://youtu.be/0lKHFJpaZvE}
+    
+   \TODO{completar con imagen del libro}
 
 \end{frame}
 
@@ -621,5 +623,16 @@
 	\note{Información obtenida de:
 		Cyrill Stachniss KF y EKF: https://youtu.be/E-6paM_Iwfc
 		Chebrolu EKF Localization: https://youtu.be/PiCC-SxWlH8}
+    
+    https://automaticaddison.com/extended-kalman-filter-ekf-with-python-code-example/
+    https://github.com/shangzhouye/EKF-SLAM-on-Turtlebot3
+    
+    https://github.com/ser94mor/sensor-fusion
+    
+    https://github.com/AtsushiSakai/PythonRobotics
+    
+    Puede ser que el tp sea en python no mas y el tp final hacerlo en ROS2.
+    
+    
 \end{frame}
 
