--- a/tps/tp2/tp2.tex
+++ b/tps/tp2/tp2.tex
@@ -190,6 +190,13 @@ En base a los gráficos anteriores:
     \label{fig:trajectories}
 \end{figure}
 
+\ejercicio El mundo deberá contar con varios cilindros de un mismo radio dado $r$. Los cilindros deben estar distribuidos en el entorno y ser todos observados por el láser del robot al momento de inicio de la simulación.
+
+Utilizar una medición láser para generar un mapa de la escena observada por el robot en simulación. Para esto deberá detectar los cilindros en la medición laser obtenida. Cada cilindro será utilizado como un landmark en el mapa virtual del robot. Deberá estimar el centro del cilindro, dicha posición será la posición de un landmark en el mapa virtual del robot. Debera crear un mapa de landmarks y publicarlo y visualizarlo en RVIZ utilizando el marker de cilindro.
+Obtenga un screenshot de RViz donde s
+e visualice las mediciones del láser y los landmarks reconstruidos.
+
+
 \printbibliography
 
 \end{document}
