Add sampling odometry motion model image

--- a/teoricas/teorica_06/src/localization.tex
+++ b/teoricas/teorica_06/src/localization.tex
@@ -299,7 +299,18 @@
 \begin{frame}{Ejemplo: Movimiento basado en odometría}
     \note{Información obtenida de Cyrill Stachniss Bayes: https://youtu.be/0lKHFJpaZvE}
     
-   \TODO{completar con imagen del libro}
+   	\begin{figure}[!h]
+    	\centering
+    	\subfloat[]
+    	{
+    		\includegraphics[width=0.6\columnwidth]{./images/samping_odometry_motion_model.pdf}
+    	}\\
+    	\subfloat[Muestras del motion model]
+    	{
+    		\includegraphics[width=0.6\columnwidth]{./images/samping_odometry_motion_model.pdf}
+    	}
+    \end{figure}
+
 
 \end{frame}
 
