Comment localization programming robotic car slides

--- a/teoricas/teorica_06/slides.tex
+++ b/teoricas/teorica_06/slides.tex
@@ -32,4 +32,7 @@
 	\section{Bibliografía}
 	\input{src/bibliography.tex}
 	
+	% Programming a robotic car seminar slides
+	%\input{src/programming_robotic_car_slides.tex}
+	
 \end{document}
