--- a/teoricas/teorica_06/src/localization.tex
+++ b/teoricas/teorica_06/src/localization.tex
@@ -282,11 +282,22 @@
     \end{equation*}
 \end{frame}
 
-\begin{frame}{Ejemplo: Movimiento basado en odometría (Banana shape)}
-    \note{Información obtenida de Cyrill Stachniss Bayes: https://youtu.be/0lKHFJpaZvE}
-    
-   \TODO{completar con imagen del libro}
-   
+\begin{frame}{Ejemplo: Movimiento basado en odometría}
+	\note{Información obtenida de Cyrill Stachniss Bayes: https://youtu.be/0lKHFJpaZvE}
+	
+	\begin{figure}[!h]
+		\centering
+		\subfloat[]
+		{
+			\includegraphics[width=0.6\columnwidth]{./images/samping_odometry_motion_model.pdf}
+		}\\
+		\subfloat[Muestras del motion model]
+		{
+			\includegraphics[width=0.6\columnwidth]{./images/samping_odometry_motion_model.pdf}
+		}
+	\end{figure}
+	
+	
 \end{frame}
 
 \begin{frame}{Observation model}
@@ -312,320 +323,6 @@
     \end{figure}
 
 
-\end{frame}
-
-
-\section{Medición}
-
-\begin{frame}{Belief luego de sensar}
-    \begin{block}{Ejemplo}
-        \begin{itemize}
-            \item Un mundo constituido por cinco celdas $x_{i}$ donde $i = 1, \dots ,5$
-            \item Las celdas $x_{2}$ y $x_{3}$ son rojas, y el resto verdes.
-            \item Inicialmente el robot desconoce su posición
-            \item La probabilidad de que el robot sense correctamente  esta dada por la siguiente distribución de probabilidades:
-            
-            \begin{displaymath}
-                P(sensa \ color | x_{i} = color) = 0.6
-            \end{displaymath}
-            \begin{displaymath}
-                P(sensa \ \neg color | x_{i} = color) = 0.2
-            \end{displaymath}
-            
-            Observar que no es una distribución de probabilidad correcta ya que la suma debe ser $1$.
-            
-        \end{itemize}
-        
-    \end{block}
-    
-    \begin{center}
-        \includegraphics<1>[height=1.0cm]{./images/uniform_five_cells.png}
-    \end{center}
-    
-\end{frame}
-
-\begin{frame}{Belief luego de sensar}
-    
-    Si el robot \alert{sensa rojo}, ?`Cuál es su Posterior belief?
-    
-    \begin{center}
-        \includegraphics<1>[height=3.5cm]{./images/inaccurate_sensing_quiz.png}
-    \end{center}
-\end{frame}
-
-\begin{frame}{Belief luego de sensar}
-    
-    Si el robot \alert{sensa rojo}, ?`Cuál es su Posterior belief?
-    
-    \begin{center}
-        \includegraphics<1>[height=3.5cm]{./images/inaccurate_sensing_solution.png}
-    \end{center}
-    \begin{footnotesize}
-        \begin{displaymath}
-            P(x_{i} = rojo | sensa \ rojo) = P(sensa \ rojo | x_{i} = rojo) P(x_{i}) = 0.2 \times 0.6 = 0.12
-        \end{displaymath}
-        \begin{displaymath}
-            P(x_{i} = verde | sensa \ rojo) = P(sensa \ rojo | x_{i} = verde) P(x_{i}) = 0.2 \times 0.2 = 0.04
-        \end{displaymath}
-    \end{footnotesize}
-    
-\end{frame}
-
-\begin{frame}{Belief luego de sensar}
-    \begin{displaymath}
-        P(x_{i} = rojo | sensa \ rojo) = 0.12
-    \end{displaymath}
-    \begin{displaymath}
-        P(x_{i} = verde | sensa \ rojo) = 0.04
-    \end{displaymath}
-    
-    Observar que estamos ante una distribución de probabilidades formalmente incorrecta dado que la suma: 
-    \begin{displaymath}
-        \sum_{i=1}^{5} P(x_{i}) = 0.04 + 0.12 + 0.12 + 0.04 + 0.04 = 0.36
-    \end{displaymath}
-    
-    
-    Si normalizamos la distribución, queda:
-    
-    \begin{displaymath}
-        P(x_{i} = rojo| sensa \ rojo) = \dfrac{0.12}{0.36} = \dfrac{1}{3}
-    \end{displaymath}
-    \begin{displaymath}
-        P(x_{i} = verde| sensa \ rojo) = \dfrac{0.04}{0.36} = \dfrac{1}{9}
-    \end{displaymath}
-    
-    En general, $P(x_{i}|z)$ es la distribución Posterior belief del lugar $x_{i}$ dada la medición $z$.
-\end{frame}
-
-
-\begin{frame}{Regla de Bayes}
-    
-    Notar que cuando el robot sensa no hace otra cosa que aplicar la Regla Bayes:
-    
-    \begin{block}{Regla de Bayes}
-        \begin{displaymath}
-            P(x_{i} | z) = \dfrac{P(z | x_{i})P(x_{i})} {P(z)} 
-        \end{displaymath}
-        $P(x_{i} | z)$ : probabilidad a Posteriori (Posterior Belief) \\
-        $P(z | x_{i})$ : probabilidad de Medición \\
-        $P(x_{i})$ : probabilidad a Priori \\
-        $P(z)$ : término de Normalización
-    \end{block}
-    
-\end{frame}
-
-\section{Motricidad}
-\begin{frame}{Belief luego del movimiento}
-    \begin{block}{Ejemplo (continuación)}
-        \begin{itemize}
-            \item Un mundo \alert{cíclico} constituido por cinco celdas $x_{i}$ donde $i = 1, \dots ,5$
-            \item La distribución de probabilidad a priori esta determinada por:
-            \begin{displaymath}
-                P(x_{1}) = P(x_{4}) = P(x_{5}) = \dfrac{1}{9}
-            \end{displaymath}
-            \begin{displaymath}
-                P(x_{2}) = P(x_{3}) = \dfrac{1}{3}	
-            \end{displaymath}
-        \end{itemize}
-    \end{block}
-    
-\end{frame}
-
-\begin{frame}{Belief luego del movimiento}
-    Si el robot tiene una \alert{motricidad exacta} y desea moverse \alert{una} celda a la derecha, ?`Cuál es su Posterior belief?
-    
-    \begin{center}
-        \includegraphics<1>[height=3.5cm]{./images/exact_motion_quiz.png}
-    \end{center}
-    
-\end{frame}
-
-\begin{frame}{Belief luego del movimiento}
-    Si el robot tiene una \alert{motricidad exacta} y desea moverse \alert{una} celda a la derecha, ?`Cuál es su Posterior belief?
-    
-    \begin{center}
-        \includegraphics<1>[height=3.5cm]{./images/exact_motion_solution.png}
-    \end{center}
-    
-\end{frame}
-
-\begin{frame}{Belief luego del movimiento}
-    Suponiendo ahora que el robot desea moverse \alert{dos} celdas a la derecha y tiene una \alert{motricidad inexacta} con la siguiente distribución de probabilidad:
-    \begin{columns}[t]
-        \begin{column}{5cm}
-            \begin{displaymath}
-                P(x_{i+2}| x_{i}) = 0.8
-            \end{displaymath}
-            \begin{displaymath}
-                P(x_{i+1}| x_{i}) = 0.1
-            \end{displaymath}
-            \begin{displaymath}
-                P(x_{i+3}| x_{i}) = 0.1
-            \end{displaymath}
-        \end{column}
-        \begin{column}{5cm}
-            \begin{center}
-                \includegraphics<1>[height=1.8cm]{./images/inexact_motion.png}
-            \end{center}
-        \end{column}
-    \end{columns}
-\end{frame}
-
-\begin{frame}{Belief luego del movimiento}
-    
-    Si el robot conoce exactamente cuál es su posición inicial, ?`Cuál es su Posterior belief?
-    
-    \begin{columns}[t]
-        \begin{column}{5cm}
-            \begin{center}
-                \includegraphics<1>[height=2.0cm]			{./images/inexact_motion_initial_pose_quiz.png}
-            \end{center}
-        \end{column}
-        \begin{column}{5cm}
-            \begin{center}
-                \includegraphics<1>[height=1.8cm]{./images/inexact_motion.png}
-            \end{center}
-        \end{column}
-    \end{columns}
-\end{frame}
-
-\begin{frame}{Belief luego del movimiento}
-    
-    Si el robot conoce exactamente cuál es su posición inicial, ?`Cuál es su Posterior belief?
-    
-    \begin{columns}[t]
-        \begin{column}{5cm}
-            \begin{center}
-                \includegraphics<1>[height=2cm]			{./images/inexact_motion_initial_pose_solution.png}
-            \end{center}
-        \end{column}
-        \begin{column}{5cm}
-            \begin{center}
-                \includegraphics<1>[height=1.8cm]{./images/inexact_motion.png}
-            \end{center}
-        \end{column}
-    \end{columns}
-\end{frame}
-
-\begin{frame}{Belief luego del movimiento}
-    Si el robot tiene como distribución inicial que se encuentra en las celdas $x_{2}$ y $x_{4}$ con igual probabilidad, formalmente,
-    \begin{displaymath}
-        P(x_{2}) = P(x_{4}) = 0.5
-    \end{displaymath}
-    ?`Cuál es su Posterior belief?
-    
-    \begin{columns}[t]
-        \begin{column}{5cm}
-            \begin{center}
-                \includegraphics<1>[height=2cm]{./images/inexact_motion_quiz.png}
-            \end{center}
-        \end{column}
-        \begin{column}{5cm}
-            \begin{center}
-                \includegraphics<1>[height=1.8cm]{./images/inexact_motion.png}
-            \end{center}
-        \end{column}
-    \end{columns}
-\end{frame}
-
-\begin{frame}{Belief luego del movimiento}
-    
-    Si el robot tiene como distribución inicial que se encuentra en las celdas $x_{2}$ y $x_{4}$ con igual probabilidad, formalmente,
-    \begin{displaymath}
-        P(x_{2}) = P(x_{4}) = 0.5
-    \end{displaymath}
-    ?`Cuál es su Posterior belief?
-    
-    \begin{columns}[t]
-        \begin{column}{5cm}
-            \begin{center}
-                \includegraphics<1>[height=2cm]{./images/inexact_motion_solution.png}
-            \end{center}
-        \end{column}
-        \begin{column}{5cm}
-            \begin{center}
-                \includegraphics<1>[height=1.8cm]{./images/inexact_motion.png}
-            \end{center}
-        \end{column}
-    \end{columns}
-    \begin{small}
-        $P(x_{1}) = P(x_{4}) P(x_{1}|x_{4}) = 0.5 \times 0.8 = 0.4$ \\
-        $P(x_{2}) = P(x_{4}) P(x_{2}|x_{4}) = 0.5 \times 0.1 = 0.05$ \\
-        $P(x_{3}) = P(x_{2}) P(x_{3}|x_{2}) = 0.5 \times 0.1 = 0.05$ \\	
-        $P(x_{4}) = P(x_{2}) P(x_{4}|x_{2}) = 0.5 \times 0.8 = 0.4$ \\	
-        $P(x_{5}) = P(x_{2}) {\color{red} P(x_{5}|x_{2})} + P(x_{4}) {\color{green} P(x_{5}|x_{4})} = 0.5 \times {\color{red} 0.1} + 0.5 \times {\color{green} 0.1} = 0.1$	
-    \end{small}
-\end{frame}
-
-\section{Sensar y Mover}
-\begin{frame}{Ciclo de sensar y mover}
-    Localización no es más que la iteración de sensar y mover.
-    \begin{center}
-        \includegraphics<1>[height=2.5cm]{./images/sens_and_move.pdf}
-    \end{center}
-    
-    \begin{block}{Entropía}
-        Medida de información que tiene la distribución
-        \begin{displaymath}
-            - \sum P(x_{i}) \log P(x_{i})
-        \end{displaymath}
-        
-        En otras palabras, la entropía expresa la información que un robot recibe luego de ejecutar una acción específica.
-    \end{block}
-    
-\end{frame}
-
-
-\begin{frame}{Definición formal de localización}
-    
-    \begin{block}{Medición}
-        \begin{displaymath}
-            \Bar{P}(x_{i}|z) \leftarrow P(z|x_{i}) P(x_{i})
-        \end{displaymath}
-        \begin{displaymath}
-            \alpha \leftarrow \sum \Bar{P}(x_{i}|z)
-        \end{displaymath}
-        \begin{displaymath}
-            P(x_{i}|z) \leftarrow \frac{1}{\alpha} \Bar{P}(x_{i}|z)
-        \end{displaymath}
-        
-    \end{block}
-    
-\end{frame}
-
-\begin{frame}{Definición formal de localización}
-    
-    Sea $P(x_{i}^{t})$ la probabilidad de estar en el punto $x_{i}$ luego del movimiento del robot
-    
-    \begin{block}{Motricidad}
-        
-        \begin{displaymath}
-            P(x_{i}^{t}) = \sum_{j} P(x_{j}^{t-1}) P(x_{i}|x_{j})
-        \end{displaymath}
-        
-    \end{block}
-    
-    La probabilidad de estar en $x_{i}$ se calcula a través de todos los lugares de los que podríamos haber venido
-    
-    Observar que la expresión anterior no es otra cosa que el Teorema de Probabilidad total.
-    
-    \begin{block}{Teorema de Probabilidad Total}
-        
-        \begin{displaymath}
-            P(A) = \sum_{B}^{}P(A|B) P(B)
-        \end{displaymath}
-        
-    \end{block}
-    
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{Bayes Filter}
-	
-	\note{Información obtenida de Cyrill Stachniss Bayes: https://youtu.be/0lKHFJpaZvE}
-	
-	
 \end{frame}
 
 \begin{frame}
