--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -47,6 +47,7 @@
 \newcommand{\essentialMatrix}{\vec{E}}
 \newcommand{\fundamentalMatrix}{\vec{F}}
 \newcommand{\inverse}[1]{{#1}^{-1}}
+\newcommand{\covariance}{\Sigma}
 
 
 % Localization (State Estiamtion)
