--- a/teoricas/teorica_06/slides.tex
+++ b/teoricas/teorica_06/slides.tex
@@ -26,8 +26,11 @@
 	% add title page
 	\frame{\titlepage}
 	
-	\section{Localización}
+	\section{Filtro de Bayes}
 	\input{src/localization.tex}
+	
+	\section{Filtro de Kalman Extendido (EKF)}
+	\input{src/ekf.tex}
 	
 	\section{Bibliografía}
 	\input{src/bibliography.tex}
