--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -47,13 +47,20 @@
 \newcommand{\essentialMatrix}{\vec{E}}
 \newcommand{\fundamentalMatrix}{\vec{F}}
 \newcommand{\inverse}[1]{{#1}^{-1}}
-\newcommand{\covariance}{\Sigma}
+
 
 
 % Localization (State Estiamtion)
 \newcommand{\state}{x}
 \newcommand{\observation}{z}
 \newcommand{\controlCommand}{u}
+\newcommand{\covariance}{\Sigma}
+\newcommand{\motionModelNoise}{\epsilon}
+\newcommand{\measurementModelNoise}{\epsilon}
+\newcommand{\motionModelFunction}[1]{g\left( #1 \right)}
+\newcommand{\observationModelFunction}[1]{h\left( #1 \right)}
+
+
 
 % Motion model
 \newcommand{\position}{\vec{p}}
