Add ekf algorithm

--- a/common/latex_preamble.tex
+++ b/common/latex_preamble.tex
@@ -16,6 +16,7 @@
 \usepackage{booktabs} % \toprule \midrule \bottomrule
 \usepackage[backend=biber]{biblatex} % set biber to format references. Must configure Biber in Texstudio
 \usepackage{csquotes} % to remove warning triggered by biblatex and babel
+\usepackage{algpseudocode} % to write algorithm
 
 % Color commands for annotations
 \newcommand\TODO[1]{\textbf{\textcolor{red}{#1}}} %  TODO notes
