--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -59,6 +59,12 @@
 \newcommand{\measurementModelNoise}{\epsilon}
 \newcommand{\motionModelFunction}[1]{g\left( #1 \right)}
 \newcommand{\observationModelFunction}[1]{h\left( #1 \right)}
+\newcommand{\motionModelCovariance}{R}
+\newcommand{\observationModelCovariance}{Q}
+\newcommand{\motionModelJacobian}{G}
+\newcommand{\observationModelJacobian}{H}
+\newcommand{\kalmanGain}{K}
+
 
 
 
