Add odometry_as_controls image

--- a/teoricas/teorica_06/src/ekf.tex
+++ b/teoricas/teorica_06/src/ekf.tex
@@ -125,6 +125,13 @@
 	\frametitle{Odometry as controls}
 	\note{información extraida de https://youtu.be/PiCC-SxWlH8}
 	
+   	\begin{figure}[!h]
+        \includegraphics[width=0.6\columnwidth]{./images/odometry_as_controls.pdf}
+    \end{figure}
+
+    \begin{equation*}
+        \controlCommand = (\delta_{rot1}, \delta_{trans}, \delta_{rot2})
+    \end{equation*}
 	
 \end{frame}
 
