Add jacobian slides

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -64,6 +64,7 @@
 \newcommand{\motionModelJacobian}{G}
 \newcommand{\observationModelJacobian}{H}
 \newcommand{\kalmanGain}{K}
+\newcommand{\normalDistribution}[2]{\mathcal{N}\left( {#1}, {#2} \right)}
 
 
 
