--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -65,7 +65,7 @@
 \newcommand{\observationModelJacobian}{H}
 \newcommand{\kalmanGain}{K}
 \newcommand{\normalDistribution}[2]{\mathcal{N}\left( {#1}, {#2} \right)}
-
+\newcommand{\motionModelJacobianControl}{V}
 
 
 
