Add jacobian slides

--- a/common/math_preamble.tex
+++ b/common/math_preamble.tex
@@ -11,6 +11,9 @@
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
 
+% Declare atan2 
+\DeclareMathOperator{\atantwo}{atan2}
+
 % Homogeneous decoration function
 \newcommand{\homo}[1]{\dot{#1}}
 
